--- a/Console/Panel_Setting/config.json
+++ b/Console/Panel_Setting/config.json
@@ -1,4 +1,4 @@
 {
     "port": ":1145",
-    "ServerPath": "D:\\LiteZero_Project\\ZephyrCraft-Panel-2\\test\\bedrock_server.exe"
+    "ServerPath": "D:\\LiteZero_Project\\ZephyrCraft-Panel-2\\BDS_Test\\bedrock_server_mod.exe"
 }
