更新 Tauri 客户端依赖，添加 vue-router，重构 App.vue 以支持路由，优化 Vite 配置，增强进程管理功能，更新配置文件路径

--- a/Server/Panel_Setting/config.json
+++ b/Server/Panel_Setting/config.json
@@ -1,4 +1,4 @@
 {
     "port": ":1145",
-    "ServerPath": "D:\\LiteZero_Project\\ZephyrCraft-Panel-2\\BDS_Test\\bedrock_server_mod.exe"
+    "ServerPath": "C:\\Users\\e-pyl\\Desktop\\Bedrock_SMPVP\\bedrock_server.exe"
 }
