--- a/Client/Tauri/package.json
+++ b/Client/Tauri/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "unplugin-icons": "^22.1.0",
+    "unplugin-vue-components": "^28.8.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
