增强终端功能，添加ANSI颜色支持和状态查询命令，更新配置文件路径，重构进程管理逻辑，优化用户界面和交互体验。

--- a/Server/Panel_Setting/config.json
+++ b/Server/Panel_Setting/config.json
@@ -1,4 +1,4 @@
 {
     "port": ":1145",
-    "ServerPath": "C:\\Users\\e-pyl\\Desktop\\Bedrock_SMPVP\\bedrock_server.exe"
+    "ServerPath": "C:\\Users\\e-pyl\\Desktop\\BDS_Test\\bedrock_server_mod.exe"
 }
