--- a/Server/Panel_Setting/config.json
+++ b/Server/Panel_Setting/config.json
@@ -1,4 +1,1 @@
-{
-    "port": ":1145",
-    "ServerPath": "C:\\Users\\e-pyl\\Desktop\\BDS_Test\\bedrock_server_mod.exe"
-}
+{"LoaderVersion":"LeviLamina-1.4.1","ServerPath":"C:\\Users\\e-pyl\\Desktop\\BDS_Test\\bedrock_server_mod.exe","Version":"1.21.93.1(ProtocolVersion 819)","port":":1145"}
