--- a/Server/Panel_Setting/config.json
+++ b/Server/Panel_Setting/config.json
@@ -1,1 +1,1 @@
-{"LoaderVersion":"LeviLamina-1.4.1","ServerPath":"C:\\Users\\e-pyl\\Desktop\\BDS_Test\\bedrock_server_mod.exe","Version":"1.21.93.1(ProtocolVersion 819)","port":":1145"}
+{"LoaderVersion":"LeviLamina-1.4.1","ServerPath":"D:\\LiteZero_Project\\ZephyrCraft-Panel-2\\BDS_Test\\bedrock_server_mod.exe","Version":"1.21.93.1(ProtocolVersion 819)","port":":1145"}
