--- a/Server_JE/src/main/resources/config.json
+++ b/Server_JE/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "LoaderVersion": "LeviLamina-1.4.1",
+  "ServerCore": "LeviLamina-1.4.1",
   "ServerPath": "D:\\LiteZero_Project\\ZephyrCraft-Panel-2\\BDS_Test\\bedrock_server_mod.exe",
   "Version": "1.21.93.1(ProtocolVersion 819)",
   "Port": "1145"
